--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <img src="resources/images/the-flatiron-building.png" alt="flatiron">
 </div>
 
+## Erster Unterabschnitt
+
+<div class="">
 <h2>Our Process</h2>
 
 <img src="resources/images/identify.svg" alt="arrow">
@@ -31,10 +34,18 @@
 <h3>Execute</h3>
 <p>We put everything we have into our projects.</p>
 
+</div>
+
+## Zwischenüberschrift
+
 <div class="ZweiterHeader">
 <p>Designed in New York</p>
   <img src="resources/images/the-flatiron-building.png" alt="flatiron">
 </div>
+
+<div class="">
+
+## Zweiter Unterabschnitt
 
 <h3>Portfolio</h3>
 <p>Coming Soon</p>
@@ -47,8 +58,14 @@ E-mail: test@example.com <br>
 Twitter: @test
 </p>
 
-<p>© Broadway 2016 Home About Work Team Contact</p>
+</div>
 
+##Kleingedrucktes
+
+<div class="">
+
+<p>© Broadway 2016 Home About Work Team Contact</p>
+</div>
 
   </body>
 </html>
