--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
   </head>
   <body>
 
-<div class="Header">
+<div id="Header">
 <h1>Broadway Design</h1>
-<p>Home</p>
-<p>About</p>
-<p>Work</p>
-<p>Team</p>
-<p>Contact</p>
-<img src="resources/images/the-flatiron-building.png" alt="flatiron">
+<div id="menu">
+<p id="home">Home</p>
+<p id="about">About</p>
+<p id="work">Work</p>
+<p id="team">Team</p>
+<p id="contact">Contact</p>
+</div>
 </div>
 
-## Erster Unterabschnitt
+<!-- Erster Unterabschnitt -->
 
-<div class="">
+<div id="section1">
 <h2>Our Process</h2>
 
 <img src="resources/images/identify.svg" alt="arrow">
@@ -36,17 +37,16 @@
 
 </div>
 
-## Zwischenüberschrift
+<!-- Zwischenüberschrift -->
 
-<div class="ZweiterHeader">
+<div id="ZweiterHeader">
 <p>Designed in New York</p>
-  <img src="resources/images/the-flatiron-building.png" alt="flatiron">
 </div>
 
-<div class="">
 
-## Zweiter Unterabschnitt
+<!-- Zweiter Unterabschnitt -->
 
+<div id="section2">
 <h3>Portfolio</h3>
 <p>Coming Soon</p>
 <h3>Team</h3>
@@ -57,14 +57,14 @@ Phone: (555)-555-5555 <br>
 E-mail: test@example.com <br>
 Twitter: @test
 </p>
-
 </div>
 
-##Kleingedrucktes
+<!-- Kleingedrucktes -->
 
-<div class="">
+<div id="letztes">
 
-<p>© Broadway 2016 Home About Work Team Contact</p>
+<p> <font size=-2>© Broadway 2016</font> <a href="#home">Home</a> <a href="#about">About</a> <a href="#work">Work</a> <a href="#team">Team</a> <a href="#contact">Contact</a>
+</p>
 </div>
 
   </body>
